# rustos

./: .gitignore  Cargo.toml  Makefile  README.md  log.txt  run.sh  run_x86.sh  가이드.md
bootloader/: Cargo.toml
bootloader/src/: alloc_panic.rs  boot.rs  elf_loader.rs  error.rs  gui.rs  main.rs
kernel/: Cargo.toml
kernel/src/: asmbly.rs  asmtools.rs  fat.rs  gdt.rs  gui.rs  heap.rs  idt.rs  main.rs  multitask.rs  paging.rs  pic.rs  pit.rs  rtc.rs
kernel/src/debug/: mod.rs  panic.rs
kernel/src/descriptor/: idt.rs
kernel/src/handlers/: exceptions.rs  mod.rs
kernel/src/idt/: handlers.rs  mod.rs
kernel/src/multitask/: mod.rs  register_macros.rs
