[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.11", default-features = false }
log = { version = "0.4", default-features = false }
buddy_system_allocator = "0.12.0"
embedded-graphics = { version = "0.8", default-features = false }
fatfs = { git = "https://github.com/rafalh/rust-fatfs", default-features = false, features = ["alloc"] }

lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.10.0"
volatile = "0.6.1"
x86_64 = { version = "0.15.4", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
pic8259 = "0.11.0"
